Bug 236700 - [InputElement] Return empty string for an invalid floating-point number that ends with "."
Summary: [InputElement] Return empty string for an invalid floating-point number that ...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Forms (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: zsun
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2022-02-16 02:44 PST by zsun
Modified: 2022-02-18 08:58 PST (History)
8 users (show)

See Also:


Attachments
Patch (3.25 KB, patch)
2022-02-16 02:51 PST, zsun
no flags Details | Formatted Diff | Diff
Patch (15.05 KB, patch)
2022-02-16 07:27 PST, zsun
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Comment 1 zsun 2022-02-16 02:51:00 PST
Created attachment 452166 [details]
Patch
Comment 2 zsun 2022-02-16 07:27:25 PST
Created attachment 452195 [details]
Patch
Comment 3 Chris Dumez 2022-02-16 09:30:23 PST
Comment on attachment 452195 [details]
Patch

r=me
Comment 4 EWS 2022-02-18 07:40:55 PST
Committed r290124 (247468@main): <https://commits.webkit.org/247468@main>

All reviewed patches have been landed. Closing bug and clearing flags on attachment 452195 [details].
Comment 5 Radar WebKit Bug Importer 2022-02-18 07:41:27 PST
<rdar://problem/89144741>
Comment 6 Darin Adler 2022-02-18 08:58:15 PST
Comment on attachment 452195 [details]
Patch

View in context: https://bugs.webkit.org/attachment.cgi?id=452195&action=review

> Source/WebCore/html/parser/HTMLParserIdioms.cpp:134
> +    if (string.endsWith('.'))
> +        return fallbackValue;

Would be natural to have a comment here just like the one on the code paragraph above.