[InputElement] Return empty string for an invalid floating-point number that ends with "." https://bugs.webkit.org/show_bug.cgi?id=236700

Reviewed by Chris Dumez.

LayoutTests/imported/w3c:

* web-platform-tests/html/semantics/forms/the-input-element/number-expected.txt:

Source/WebCore:

As per specs https://html.spec.whatwg.org/multipage/input.html#number-state-(type%3Dnumber),
"If the value of the element is not a valid floating-point number, then set it to the empty
string instead".

* html/parser/HTMLParserIdioms.cpp:
(WebCore::parseToDoubleForNumberType):

LayoutTests:

* fast/forms/number/number-stepup-stepdown-expected.txt:
* fast/forms/number/number-stepup-stepdown-from-renderer-expected.txt:
* fast/forms/number/number-stepup-stepdown-from-renderer.html:
* fast/forms/number/number-stepup-stepdown.html:



Canonical link: https://commits.webkit.org/247468@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@290124 268f45cc-cd09-0410-ab3c-d52691b4dbfc